--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
   
   <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/primer-react.05990da7b38026080f99.module.css" />
 <link crossorigin="anonymous" media="all" rel="stylesheet" href="https://github.githubassets.com/assets/notifications-subscriptions-menu.e5e6e593370c808590a5.module.css" />
-
+<style type="text/css">
+	.a{color:blue;}
+</style>
 
     
 		<title>Magnet player 磁力播放｜ 磁力搜索｜追剧</title>
